Refactored database package and implement repository for database operation on seed api
